# pardus-lib-domain-joiner

./: .gitignore  LICENSE  MANIFEST.in  README.md  meson.build  update_translations.sh
debian/: changelog  control  copyright
pardus-domain-cli/: pardus-domain-cli  setup.py  update_translations.sh
pardus-domain-cli/.pybuild/cpython3_3.11/: .pydistutils.cfg
pardus-domain-cli/debian/: changelog  control  copyright
pardus-domain-cli/po/: files  pardus-domain-cli.pot  tr.po
pardus-domain-cli/src/: Main.py
pardus-domain-core/: setup.py
pardus-domain-core/.pybuild/cpython3_3.11/: .pydistutils.cfg
pardus-domain-core/debian/: control  copyright
pardus-domain-core/pardus-domain-core/: config_manager.py  domain_joiner_winbind.py  domain_operations.py  update_krb5_config.py
pardus_domain_core/: meson.build  setup.py  update_translations.sh
pardus_domain_core/debian/: changelog  control  copyright
pardus_domain_core/pardus_domain_core/: config_manager.py  domain_joiner_ldap.py  domain_joiner_realmd.py  domain_joiner_winbind.py  domain_operations.py
pardus_domain_core/po/: files  pardus-domain-core.pot  tr.po
po/: LINGUAS  POTFILES  files  meson.build  pardus-lib-domain-joiner.pot  pt.po  tr.po
src/: config_manager.py  domain_joiner_ldap.py  domain_joiner_realmd.py  domain_joiner_winbind.py  domain_operations.py  logger.py  update_krb5_config.py
